--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -3,6 +3,9 @@ header.general.appweb = NagoJudge
 footer.general.appweb = Never alone, go at outcome.
 
 
+validacion.formato.email = Correo Electronico Invalido.
+validacion.longitud.minima = Longitud Minima Invalida.
+
 general.appweb.signin.label = Iniciar Sesion
 general.appweb.signin.user.label = Usuario:
 general.appweb.signin.user.placeholder = usuario@ejemplo.com:
