- Acoplamiento Servidor TomEE (80%)

--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -6,6 +6,16 @@ footer.general.appweb = Never alone, go at outcome.
 validacion.formato.email = Correo Electronico Invalido.
 validacion.longitud.minima = Longitud Minima Invalida.
 
+
+
+
+general.table.noinfo = No Hay informaci\u00f3n relacionada actualmente.
+general.label.view = View
+general.label.codeSource = Codigo Fuente
+
+
+
+
 general.appweb.signin.label = Iniciar Sesion
 general.appweb.signin.user.label = Usuario:
 general.appweb.signin.user.placeholder = usuario@ejemplo.com:
@@ -29,3 +39,22 @@ challenge.label.duration = Duracion(min)
 challenge.label.quantityProblems = Cantidad
 challenge.label.descriptionChallenge = Obervaciones
 challenge.label.descriptionChallenge.placeholder = Observaciones y/o inquietudes
+
+submit.label.idSubmit = Id Submit
+submit.label.nameStatus = Status
+submit.label.nameLanguag = Language
+submit.label.dateSubmit = Date Submit
+submit.label.dateJudgement = Date Judge
+
+
+problem.label.idProblem = Id Problem
+problem.label.nameProblem = Problem
+problem.label.nameAutor = Autor
+problem.lable.nameCategory = Categoria
+problem.label.nameDescripcion = Descripcion
+
+
+
+account.label.nameAccount = Account
+
+
