- Acoplamiento Servidor TomEE (90%) - Acoplamiento Push Notify

--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -6,12 +6,14 @@ footer.general.appweb = Never alone, go at outcome.
 validacion.formato.email = Correo Electronico Invalido.
 validacion.longitud.minima = Longitud Minima Invalida.
 
+validacion.arhivo.noseleccionado = Por favor, seleccione un archivo para continuar.
 
 
 
 general.table.noinfo = No Hay informaci\u00f3n relacionada actualmente.
 general.label.view = View
 general.label.codeSource = Codigo Fuente
+general.label.archivo.upload = Selecciona un archivo
 
 
 
