- Acoplamiento Servidor TomEE (95%) - Acoplamiento Push Notify (60%) - Creacion Competencias

--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -31,6 +31,8 @@ general.user.label.firstName = Nombre
 general.user.label.lastName = Apellidos
 general.user.label.email = Correo Electronico
 general.user.label.dateBirthday = Fecha Nacimiento
+general.user.label.typeUser = Usuario
+
 
 challenge.label.nameChallenge = Nombre Competencia
 challenge.label.nameOrganizer = Nombre autor
@@ -41,6 +43,9 @@ challenge.label.duration = Duracion(min)
 challenge.label.quantityProblems = Cantidad
 challenge.label.descriptionChallenge = Obervaciones
 challenge.label.descriptionChallenge.placeholder = Observaciones y/o inquietudes
+challenge.config.create.datos.title = Datos de competencia
+challenge.config.create.problems.title = Ejercicios para la competencia.
+challenge.config.create.usuarios.title = Registrar Competidores.
 
 submit.label.idSubmit = Id Submit
 submit.label.nameStatus = Status
@@ -56,7 +61,7 @@ problem.lable.nameCategory = Categoria
 problem.label.nameDescripcion = Descripcion
 
 
-
+account.label.idAccount = Id Account
 account.label.nameAccount = Account
 
 
