- Modulo Configuracion de parametros y seguridad. (60%)

--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -9,11 +9,14 @@ validacion.longitud.minima = Longitud Minima Invalida.
 validacion.arhivo.noseleccionado = Por favor, seleccione un archivo para continuar.
 
 
-
 general.table.noinfo = No Hay informaci\u00f3n relacionada actualmente.
 general.label.view = View
+general.label.edit = Edit
+general.label.create = Create
 general.label.codeSource = Codigo Fuente
 general.label.archivo.upload = Selecciona un archivo
+general.label.habilitado = Avaliable
+general.label.noHabilitado = Not Avaliable
 
 
 
@@ -65,3 +68,15 @@ account.label.idAccount = Id Account
 account.label.nameAccount = Account
 
 
+settings.parameters.table.idParameter = Parameter
+settings.parameters.table.description = Description
+settings.parameters.table.dateCreated = Date Created
+settings.parameters.table.dateUpdated = Date Updated
+settings.parameters.table.parameterSTRING = String
+settings.parameters.table.parameterBLOB = Blob
+
+settings.test.label.sentTo = To
+settings.test.label.sendSubject = Subject
+settings.test.label.sendComposite = Composite
+settings.test.label.sendComposite.editStr = Edit
+settings.test.label.sendComposite.editHtml = Edit Html
