- Estabilizacion Juez Virtual (75%)

--- a/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
+++ b/NJWeb/src/java/edu/nagojudge/web/utils/resources/msgs/general_es.properties
@@ -7,16 +7,17 @@ validacion.formato.email = Correo Electronico Invalido.
 validacion.longitud.minima = Longitud Minima Invalida.
 
 validacion.arhivo.noseleccionado = Por favor, seleccione un archivo para continuar.
+validacion.listaItem.noseleccionado = Por favor, seleccione una opcion para continuar.
 
 
 general.table.noinfo = No Hay informaci\u00f3n relacionada actualmente.
-general.label.view = View
-general.label.edit = Edit
-general.label.create = Create
+general.label.view = Ver
+general.label.edit = Editar
+general.label.create = Crear
 general.label.codeSource = Codigo Fuente
 general.label.archivo.upload = Selecciona un archivo
-general.label.habilitado = Avaliable
-general.label.noHabilitado = Not Avaliable
+general.label.habilitado = Habilitado
+general.label.noHabilitado = Inhabilitado
 
 
 
@@ -53,33 +54,35 @@ challenge.config.create.datos.title = Datos de competencia
 challenge.config.create.problems.title = Ejercicios para la competencia.
 challenge.config.create.usuarios.title = Registrar Competidores.
 
-submit.label.idSubmit = Id Submit
-submit.label.nameStatus = Status
-submit.label.nameLanguag = Language
-submit.label.dateSubmit = Date Submit
-submit.label.dateJudgement = Date Judge
+submit.label.idSubmit = Id Envio
+submit.label.nameStatus = Estado
+submit.label.nameLanguag = Lenguaje
+submit.label.dateSubmit = Fecha Envio
+submit.label.dateJudgement = Fecha Juzgamiento
+submit.label.tiempo = Tiempo
+submit.label.memoria = Memoria
 
 
-problem.label.idProblem = Id Problem
-problem.label.nameProblem = Problem
+problem.label.idProblem = Id Problema
+problem.label.nameProblem = Problema
 problem.label.nameAutor = Autor
 problem.lable.nameCategory = Categoria
 problem.label.nameDescripcion = Descripcion
 
 
-account.label.idAccount = Id Account
-account.label.nameAccount = Account
+account.label.idAccount = Id Cuenta
+account.label.nameAccount = Cuenta
 
 
-settings.parameters.table.idParameter = Parameter
-settings.parameters.table.description = Description
-settings.parameters.table.dateCreated = Date Created
-settings.parameters.table.dateUpdated = Date Updated
+settings.parameters.table.idParameter = Parametro
+settings.parameters.table.description = Descripcion
+settings.parameters.table.dateCreated = Fecha creacion
+settings.parameters.table.dateUpdated = Fecha actualizacion
 settings.parameters.table.parameterSTRING = String
 settings.parameters.table.parameterBLOB = Blob
 
-settings.test.label.sentTo = To
-settings.test.label.sendSubject = Subject
-settings.test.label.sendComposite = Composite
-settings.test.label.sendComposite.editStr = Edit
-settings.test.label.sendComposite.editHtml = Edit Html
+settings.test.label.sentTo = Enviar a:
+settings.test.label.sendSubject = Asunto
+settings.test.label.sendComposite = Contenido
+settings.test.label.sendComposite.editStr = Editar
+settings.test.label.sendComposite.editHtml = Editar Html
